# API-PostgreSQL-HH

./: .gitignore  README.md  pyproject.toml  settings.py
src/: api_hh.py  config.py  connector_db.py  db_manager.py  error_response.py  main.py  vac_emp_data.json  vacancy.py
