[tool.poetry]
name = "05-кр-букреева-ольга"
version = "0.1.0"
description = ""
authors = ["Oh Olya <chanfoxx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
